# lambda-chat-agent

./: .env.develop  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  migrate.py  network-and-data.yml  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md
.github/workflows/: python-app.yml
app/: config.py  database.py  dynamodb.py  main.py  postgres.py
app/auth/: __init__.py  jwt.py
app/llm/: __init__.py  anthropic.py  base.py  bedrock.py  openai.py  registry.py
app/middleware/: rate_limit.py
app/models/: __init__.py  db.py
app/openapi/: __init__.py  auth.py  discovery_context.py  embeddings.py  fetcher.py  operation.py  parser.py  pgvector.py  registry.py
app/repositories/: conversations.py  documents.py  messages.py  spec_sources.py  spec_sources_pg.py
app/routers/: config.py  conversations.py  documents.py  health.py  messages.py  models.py  spec_sources.py
app/schemas/: __init__.py  config.py  conversation.py  document.py  health.py  message.py  spec_source.py
app/tools/: __init__.py  base.py  basic_tools.py  calculator.py  openapi_discovery.py  registry.py
aws/: template.yml
docs/: dynamoDB.md  openapi-discovery-plan.md  openapi-pgvector-prompt.md  openapi-test-specs.md
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: create_tables.py  doc_to_text.py  ingest_s3_document.py  init_postgres.py  s3-event.json  test.py  test_ingest_s3_document.py
tests/: conftest.py  test_config.py  test_conversations.py  test_health.py  test_health_manual.py  test_messages.py  test_models.py  test_openapi_auth.py  test_openapi_discovery.py  test_openapi_embeddings.py  test_openapi_fetcher.py  test_openapi_parser.py  test_spec_sources.py  test_streaming.py
